# mcss

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CompareDistributions.cpp  MultithreadedMCSS.cpp  MultithreadedMCSS.h  Readme.txt  common.cpp  common.h  mcss.cc  mcss.cpp  mcss.h  mcssOriginal.cpp  mcssOriginal.h
.github/workflows/: test.yml
FPGA/: CMakeLists.txt
FPGA/CPU/: CMakeLists.txt  Makefile  compile_commands.json  mcss.cpp
FPGA/CPU/inc/: Maxfiles.h  random_mt.h
FPGA/CPU/inc/max/: MCSS.h
FPGA/CPU/max/: MaxInfo.json
FPGA/CPU/src/: mcss_dfe.cpp  random_mt.c
FPGA/DFE/: build.sh  build.xml
FPGA/DFE/src/dfe/: Constants.maxj  DFEManager.maxj  LoopKernel.maxj  ProcessingKernel.maxj  RNGKernel.maxj
FPGA/DFE/src/mcss/: Constants.maxj  ProcessingKernel.maxj  RNGKernel.maxj
FPGA/DFE/src/uk/ac/imperial/mcss/: Constants.maxj  LoopKernel.maxj  MCSSManager.maxj  ProcessingKernel.maxj  RNGKernel.maxj
FPGA/include/: mcss_dfe.h
GPU/include/: mcss_gpu.cuh  mcss_gpu.h
GPU/src/: mcss_gpu.cu
MCSS/: .classpath  .maxdc_builds_MCSS  .project
MCSS/.dfeprojectproperties/: build_location  classpath
MCSS/.dfeprojectproperties/dfe/: properties
MCSS/.dfeprojectproperties/sim/: properties
MCSS/.maxeler_libraries/MaxCompiler/2012.1/: location
MCSS/.maxeler_libraries/MaxCompiler/2012.2/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/2013.2.2/: location
MCSS/.maxeler_libraries/MaxCompiler/2013.3/: location
MCSS/.maxeler_libraries/MaxCompiler/2014.1/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/2014.2/: location
MCSS/.maxeler_libraries/MaxCompiler/2015.2/: location
MCSS/.maxeler_libraries/MaxCompiler/2016.1.1/: location
MCSS/.maxeler_libraries/MaxCompiler/2017.2.1/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/2018.1/: classpath
MCSS/.maxeler_libraries/MaxCompiler/2018.1-full-installer/: location
MCSS/.maxeler_libraries/MaxCompiler/2018.1-installer.tar.gz/: location
MCSS/.maxeler_libraries/MaxCompiler/2018.2-full-installer/: location
MCSS/.maxeler_libraries/MaxCompiler/2018.3.1/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/2018.3.1-installer.tar.gz/: location
MCSS/.maxeler_libraries/MaxCompiler/2019.1/: location
MCSS/.maxeler_libraries/MaxCompiler/2019.2/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/2020.2/: location
MCSS/.maxeler_libraries/MaxCompiler/2020.2-full-installer/: location
MCSS/.maxeler_libraries/MaxCompiler/2020.2-installer.tar.gz/: location
MCSS/.maxeler_libraries/MaxCompiler/2021.1/: classpath  location
MCSS/.maxeler_libraries/MaxCompiler/install-guide.pdf/: location
MCSS/.maxeler_libraries/MaxCompiler/latest/: location
MCSS/builds/sim/MCSS_MAX5C_DFE_SIM/: _init.conf
MCSS/builds/sim/MCSS_MAX5C_DFE_SIM/results/: MCSS-loopKernel-final-simulation.pxg  MCSS.h  MCSS.max  (+9 more)
MCSS/src/mcss/: Constants.maxj  LoopKernel.java  MCSSManager.maxj  ProcessingKernel.maxj  RNGKernel.maxj
MCSScpu/: .cproject  .cproperties  .maxproperties  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  mcss.cpp
MCSScpu/.maxbuttons/Run/: buttons  properties
MCSScpu/.maxbuttons/Run/dfe/: properties
MCSScpu/.maxbuttons/Run/sim/: properties
MCSScpu/inc/: rng.h
MCSScpu/max/: MCSS.max  MaxInfo.json
MCSScpu/src/: mcss.c  mcss.cpp  mcss_dfe.cpp
Utils/: Utils.cpp  Utils.h  ks-test.cpp  ks-test.h
common/include/: chacha.h  common.h
include/: common.h  mcssMultithreaded.h  mcssOriginal.h  mcss_dfe.h  mcss_multithread.h  mcss_reference.h
include/test/: compareDistributions.h  ksTest.h
include/util/: matplotlibcpp.h
plots/: multithreaded_longitudinal.csv  multithreaded_transverse.csv  reference_longitudinal.csv  reference_transverse.csv
reference/include/: mcss_reference.h
reference/src/: mcss_reference.cpp
rng/: .classpath  .maxdc_builds_rng  .project  build.xml
rng/.dfeprojectproperties/: build_location  classpath
rng/.dfeprojectproperties/dfe/: properties
rng/.dfeprojectproperties/sim/: properties
rng/.maxeler_libraries/MaxCompiler/2011.3.1/: classpath  location
rng/.maxeler_libraries/MaxCompiler/2011.3.2/: classpath  location
rng/.maxeler_libraries/MaxCompiler/2013.2.2/: classpath
rng/.maxeler_libraries/MaxCompiler/2014.1.1/: location
rng/.maxeler_libraries/MaxCompiler/2018.1/: location
rng/.maxeler_libraries/MaxCompiler/2018.2/: classpath  location
rng/.maxeler_libraries/MaxCompiler/2018.2-installer.tar.gz/: location
rng/.maxeler_libraries/MaxCompiler/2018.3.1-full-installer/: location
rng/.maxeler_libraries/MaxCompiler/2019.1/: classpath
rng/.maxeler_libraries/MaxCompiler/2019.1-full-installer/: location
rng/.maxeler_libraries/MaxCompiler/2019.1-installer.tar.gz/: location
rng/.maxeler_libraries/MaxCompiler/2019.2-full-installer/: location
rng/.maxeler_libraries/MaxCompiler/2019.2-installer.tar.gz/: location
rng/.maxeler_libraries/MaxCompiler/2020.2/: classpath
rng/.maxeler_libraries/MaxCompiler/2021.1-full-installer/: location
rng/.maxeler_libraries/MaxCompiler/2021.1-installer.tar.gz/: location
rng/.maxeler_libraries/MaxCompiler/install-guide.txt/: location
rng/builds/sim/rng_MAX5C_DFE_SIM/: _init.conf
rng/src/rng/: loopKernel.maxj  processingKernel.maxj
software-model/include/: mcss_multithread.h
software-model/src/: mcss.cpp  mcss_multithread.cpp
src/: common.cpp  mcss.cpp  mcssMultithreaded.cpp  mcssOriginal.cpp  mcss_multithread.cpp  mcss_reference.cpp  plot.cpp
test/: CMakeLists.txt  CompareDistributions.cpp  compareDistributions.cpp  ksTest.cpp  test.cpp
test/include/: compareDistributions.h  ksTest.h
test/lib/Catch2/: CMakeLists.txt  Catch2.cbp  Makefile  cmake_install.cmake
test/lib/Catch2/CMake/: FindLcov.cmake  Findcodecov.cmake
test/lib/Catch2/contrib/: Catch.cmake
test/lib/Catch2/examples/: CMakeLists.txt
test/lib/Catch2/projects/: CMakeLists.txt
test/lib/Catch2/scripts/: embedClara.py  releaseCommon.py
util/: matplotlibcpp.h  plot.cpp  test.sh
util/c++/: plot.cpp
util/python/: plot.py
(+203 files in other folders)
